--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,1 +1,4 @@
-<%- partial('_partial/archive', {pagination: 2, index: true}) %>
+<!-- index.ejs： 这是首页。 -->
+
+<%- partial('_partial/archive', {pagination: "index", index: true}) %>
+
